AT-SSO-UI Our Team

--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -2,8 +2,8 @@
 <footer class="page-footer font-small blue">
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://agilethought.com">agilethought.com</a>
+  <div class="footer-copyright text-center py-3">
+   <a href="/team">Our AT Team</a> - © 2020 Copyright: <a href="https://agilethought.com">agilethought.com</a>
   </div>
   <!-- Copyright -->
 
