AT-SSO-UI Fix Menu Links

--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -17,13 +17,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://at-university.herokuapp.com/dashboard">
+                    <a class="nav-link" href="https://at-university-ui.herokuapp.com/dashboard">
                         <span class="d-none d-lg-block">AT University</span>
                         <span class="d-lg-none">AT University</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://at-resources.herokuapp.com/dashboard">
+                    <a class="nav-link" href="https://at-resources-ui.herokuapp.com/dashboard">
                         <span class="d-none d-lg-block">AT Resources</span>
                         <span class="d-lg-none">AT Resources</span>
                     </a>
