AT-SSO-UI Fix Menu Links

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -115,7 +115,7 @@
                         <tr>
                             <td style="text-align: left;">
                                 <p>
-                                    <a href="/at-university/courses/details" title="View details">React JS</a>
+                                    <a href="https://at-university-ui.herokuapp.com/course/details" title="View details">React JS</a>
                                 </p>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50"
@@ -126,7 +126,7 @@
                         <tr>
                             <td style="text-align: left;">
                                 <p>
-                                    <a href="/at-university/courses/details" title="View details">PEGA Basics</a>
+                                    <a href="https://at-university-ui.herokuapp.com/course/details" title="View details">PEGA Basics</a>
                                 </p>
                                 <div class="progress">
                                     <div class="progress-bar bg-danger" role="progressbar" style="width: 5%;"
@@ -150,7 +150,9 @@
                         </tr>
                         <tr>
                             <td style="text-align: left;">
-                                <p>Java Academy</p>
+                                <p>
+                                    <a href="https://at-university-ui.herokuapp.com/career/details" title="View details">Java Academy</a>
+                                </p>
                                 <div class="progress">
                                     <div class="progress-bar bg-success" role="progressbar" style="width: 100%;"
                                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
@@ -159,7 +161,9 @@
                         </tr>
                         <tr>
                             <td style="text-align: left;">
-                                <p>PEGA Bussiness Architect</p>
+                                <p>
+                                    <a href="https://at-university-ui.herokuapp.com/career/details" title="View details">PEGA Bussiness Architect</a>
+                                </p>
                                 <div class="progress">
                                     <div class="progress-bar bg-warning" role="progressbar" style="width: 10%;"
                                         aria-valuenow="30" aria-valuemin="30" aria-valuemax="100">30%</div>
@@ -192,7 +196,9 @@
                         </tr>
                         <tr>
                             <td style="text-align: left;">
-                                <p>Task AT-001: UI mocks for AT University</p>
+                                <p>
+                                    <a href="https://at-resources-ui.herokuapp.com/task/details" title="Task details">Task AT-001: UI mocks for AT University</a>
+                                </p>
                                 <div class="progress">
                                     <div class="progress-bar bg-success" role="progressbar" style="width: 100%;"
                                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
@@ -201,7 +207,9 @@
                         </tr>
                         <tr>
                             <td style="text-align: left;">
-                                <p>Task AT-002: Heroku config</p>
+                                <p>
+                                    <a href="https://at-resources-ui.herokuapp.com/task/details" title="Task details">Task AT-002: Heroku config</a>
+                                </p>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50"
                                         aria-valuemin="0" aria-valuemax="100">50%</div>
