AT-SSO-UI Update home section

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -6,7 +6,7 @@
                 <div class="card-body">
                     <table style="width: 100%">
                         <tr>
-                            <td style="text-align: left;">
+                            <td style="text-align: center;">
                                 <div class="container">
                                     <div class="row my-2">
 
@@ -15,16 +15,15 @@
                                             <div class="card">
                                                 <div class="card-body">
                                                     <figure class="profileHeader-avatar">
-                                                        <img src="/img/user.jpg" title="" width="128" height="128"
-                                                            class="layout--radius">
+                                                        <img src="/img/profile.jpeg" title="" width="147" height="" class="layout--radius">
                                                     </figure>
-                                                    <p>Java Sr - May 2020</p>
+                                                    <h5>Java Sr - May 2020</h5>
                                                 </div>
                                             </div>
                                         </div>
                                         <!-- PICTURE -->
 
-                                        <!-- BADGES -->
+                                        <!-- DETAILS -->
                                         <div class="col-md-4 py-1">
                                             <div class="card">
                                                 <div class="card-body">
@@ -33,16 +32,16 @@
                                                     <p><b>Client:</b><br>ESI</p>
                                                     <p><b>Service Delivery Manager:</b><br> Miguel Hernandez<br>
                                                         <a href="#">miguel.hernandez@agilethought.com </a></p>
-                                                    <p>Badges:
+                                                    <p>
+                                                        <b>Badges:</b>
                                                         <img src="/img/badges-champion.png" width="40" title="Champion">
                                                         <img src="/img/badges-mentor.png" width="40" title="Mentor">
-                                                        <img src="/img/badges-team-player.png" width="40"
-                                                            title="Team Player">
+                                                        <img src="/img/badges-team-player.png" width="40" title="Team Player">
                                                     </p>
                                                 </div>
                                             </div>
                                         </div>
-                                        <!-- BADGES -->
+                                        <!-- DETAILS -->
 
                                         <!-- MENTOR -->
                                         <div class="col-md-4 py-1">
