--- a/src/public/css/at-sso.css
+++ b/src/public/css/at-sso.css
@@ -23,6 +23,7 @@
     background: #eee !important;
 }
 
+
 /*html,
 body {
   width: 100%;
@@ -51,124 +52,123 @@ h6 {
   line-height: 1.5;
 }}*/
 
-a:link,
-a:active,
-a:visited{
-  color:rgb(255, 255, 255);
+a.social:link,
+a.social:active,
+a.social:visited {
+    color: rgb(255, 255, 255);
 }
 
-a:hover{
-  color:rgba(255,255,255,0.6);
+a.social:hover {
+    color: rgba(255, 255, 255, 0.6);
 }
 
 .gray {
-  color: #a5a5a5;
+    color: #a5a5a5;
 }
 
-.team{
-  margin:40px;
+.team {
+    margin: 40px;
 }
 
 .team-member {
-  margin: 15px 0;
-  padding: 0;
+    margin: 15px 0;
+    padding: 0;
 }
 
 .team-member figure {
-  position: relative;
-  overflow: hidden;
-  padding: 0;
-  margin: 0;
+    position: relative;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
 }
 
 .team-member figure img {
-  min-width: 100%;
-  max-width: 300px;
+    min-width: 100%;
+    max-width: 300px;
 }
 
 .team-member figcaption p {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 .team-member figcaption ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .team-member figcaption ul {
-  visibility: visible;
-  -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
-  -o-transition: all 0.1s ease-in-out;
-  transition: all 0.1s ease-in-out;
+    visibility: visible;
+    -webkit-transition: all 0.1s ease-in-out;
+    -moz-transition: all 0.1s ease-in-out;
+    -o-transition: all 0.1s ease-in-out;
+    transition: all 0.1s ease-in-out;
 }
 
 .team-member figcaption ul li {
-  display: inline-block;
-  padding: 10px;
+    display: inline-block;
+    padding: 10px;
 }
 
 .team-member h4 {
-  margin: 10px 0 0;
-  padding: 0;
+    margin: 10px 0 0;
+    padding: 0;
 }
 
 .team-member figcaption {
-  padding: 50px;
-  color: transparent;
-  background-color: transparent;
-  position: absolute;
-  z-index: 996;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 0;
-  overflow: hidden;
-  visibility: hidden;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+    padding: 50px;
+    color: transparent;
+    background-color: transparent;
+    position: absolute;
+    z-index: 996;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    visibility: hidden;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 .team-member figure:hover figcaption {
-  visibility: visible;
-  color: rgb(10, 10, 10);
-  background: rgba(123, 255, 204, 0.9);
-  /* Primary color, can be changed via colors.css */
-  
-  height: 100%;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+    visibility: visible;
+    color: rgb(10, 10, 10);
+    background: rgba(123, 255, 204, 0.9);
+    /* Primary color, can be changed via colors.css */
+    height: 100%;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 .team-member figure:hover figcaption ul li a:hover {
-  color: rgba(51, 64, 253, 0.97);
+    color: rgba(51, 64, 253, 0.97);
 }
 
 .team-member figure img {
-  -webkit-transform: scale(1) rotate(0) translateY(0);
-  -moz-transform: scale(1) rotate(0) translateY(0);
-  -o-transform: scale(1) rotate(0) translateY(0);
-  -ms-transform: scale(1) rotate(0) translateY(0);
-  transform: scale(1) rotate(0) translateY(0);
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
+    -webkit-transform: scale(1) rotate(0) translateY(0);
+    -moz-transform: scale(1) rotate(0) translateY(0);
+    -o-transform: scale(1) rotate(0) translateY(0);
+    -ms-transform: scale(1) rotate(0) translateY(0);
+    transform: scale(1) rotate(0) translateY(0);
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
 }
 
 .team-member figure:hover img {
-  -webkit-transform: scale(1.1) rotate(1deg) translateY(12px);
-  -moz-transform: scale(1.1) rotate(1deg) translateY(12px);
-  -o-transform: scale(1.1) rotate(1deg) translateY(12px);
-  -ms-transform: scale(1.1) rotate(1deg) translateY(12px);
-  transform: scale(1.1) rotate(1deg) translateY(12px);
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
+    -webkit-transform: scale(1.1) rotate(1deg) translateY(12px);
+    -moz-transform: scale(1.1) rotate(1deg) translateY(12px);
+    -o-transform: scale(1.1) rotate(1deg) translateY(12px);
+    -ms-transform: scale(1.1) rotate(1deg) translateY(12px);
+    transform: scale(1.1) rotate(1deg) translateY(12px);
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
 }
