AT-SSO-UI Our Team

--- a/src/views/team.hbs
+++ b/src/views/team.hbs
@@ -17,8 +17,7 @@
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/lauren-cox.jpg"
-                                        alt="" class="img-responsive">
+                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/terry-fletcher.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
                                             asperiores mollitia.</p>
@@ -29,15 +28,14 @@
                                         </ul>
                                     </figcaption>
                                 </figure>
-                                <h4>Lauren Cox</h4>
-                                <p>Creative Director</p>
+                                <h4>Miguel Hern&aacute;ndez</h4>
+                                <p>Service Delivery Director</p>
                             </div><!-- /.team-member-->
                         </div>
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/jessie-barnett.jpg"
-                                        alt="" class="img-responsive">
+                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/jessie-barnett.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
                                         <p>Neque minima ea, a praesentium saepe nihil maxime quod esse numquam explicabo
                                             eligendi.</p>
@@ -48,48 +46,28 @@
                                         </ul>
                                     </figcaption>
                                 </figure>
-                                <h4>Jessie Barnett</h4>
-                                <p>UI/UX Designer</p>
+                                <h4>Emilia Guillen</h4>
+                                <p>Java Dev</p>
                             </div><!-- /.team-member-->
                         </div>
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/terry-fletcher.jpg"
-                                        alt="" class="img-responsive">
+                                    <img src="/img/internship/oscar.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
-                                        <p>Temporibus dolor, quisquam consectetur molestias, veniam voluptatum. Beatae
-                                            alias omnis totam.</p>
+                                        <p>Full "Snack" Architect | Post Rock Music | Beer Fan</p>
                                         <ul>
                                             <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
                                             <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
-                                            <li><a href="" class="social"><i class="fa fa-linkedin fa-2x"></i></a></li>
+                                            <li><a href="https://www.linkedin.com/in/mbaosanchez" class="social"><i class="fa fa-linkedin fa-2x"></i></a></li>
                                         </ul>
                                     </figcaption>
                                 </figure>
-                                <h4>Terry Fletcher</h4>
-                                <p>Web Developer</p>
+                                <h4>Oscar S&aacute;nchez</h4>
+                                <p>Java Dev</p>
                             </div><!-- /.team-member-->
                         </div>
-                        <div class="col-md-3">
-                            <div class="team-member">
-                                <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/lauren-cox.jpg"
-                                        alt="" class="img-responsive">
-                                    <figcaption>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
-                                            asperiores mollitia.</p>
-                                        <ul>
-                                            <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
-                                            <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
-                                            <li><a href="" class="social"><i class="fa fa-linkedin fa-2x"></i></a></li>
-                                        </ul>
-                                    </figcaption>
-                                </figure>
-                                <h4>Lauren Cox</h4>
-                                <p>Creative Director</p>
-                            </div><!-- /.team-member-->
-                        </div>
+
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
@@ -105,15 +83,14 @@
                                         </ul>
                                     </figcaption>
                                 </figure>
-                                <h4>Lauren Cox</h4>
-                                <p>Creative Director</p>
+                                <h4>The Mentor</h4>
+                                <p>Mentor</p>
                             </div><!-- /.team-member-->
                         </div>
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/lauren-cox.jpg"
-                                        alt="" class="img-responsive">
+                                    <img src="/img/internship/intern.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
                                             asperiores mollitia.</p>
@@ -124,15 +101,14 @@
                                         </ul>
                                     </figcaption>
                                 </figure>
-                                <h4>Lauren Cox</h4>
-                                <p>Creative Director</p>
+                                <h4>The Intern</h4>
+                                <p>Intern dude</p>
                             </div><!-- /.team-member-->
                         </div>
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/lauren-cox.jpg"
-                                        alt="" class="img-responsive">
+                                    <img src="/img/internship/intern.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
                                             asperiores mollitia.</p>
@@ -143,15 +119,14 @@
                                         </ul>
                                     </figcaption>
                                 </figure>
-                                <h4>Lauren Cox</h4>
-                                <p>Creative Director</p>
+                                <h4>The Intern</h4>
+                                <p>Intern dude</p>
                             </div><!-- /.team-member-->
                         </div>
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/lauren-cox.jpg"
-                                        alt="" class="img-responsive">
+                                    <img src="/img/internship/intern.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
                                             asperiores mollitia.</p>
@@ -162,8 +137,26 @@
                                         </ul>
                                     </figcaption>
                                 </figure>
-                                <h4>Lauren Cox</h4>
-                                <p>Creative Director</p>
+                                <h4>The Intern</h4>
+                                <p>Intern dude</p>
+                            </div><!-- /.team-member-->
+                        </div>
+                        <div class="col-md-3">
+                            <div class="team-member">
+                                <figure>
+                                    <img src="/img/internship/intern.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
+                                    <figcaption>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
+                                            asperiores mollitia.</p>
+                                        <ul>
+                                            <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-linkedin fa-2x"></i></a></li>
+                                        </ul>
+                                    </figcaption>
+                                </figure>
+                                <h4>The Intern</h4>
+                                <p>Intern dude</p>
                             </div><!-- /.team-member-->
                         </div>
                     </div>
@@ -331,7 +324,7 @@
                     </div>
                 </div>
                 <!-- Team Internship 2019 -->
-                
+
             </div>
         </div>
     </div>
